--- a/misc/xcode-templates/Project Templates/Application/MacRuby Application/MacRubyApp.xcodeproj/project.pbxproj.in
+++ b/misc/xcode-templates/Project Templates/Application/MacRuby Application/MacRubyApp.xcodeproj/project.pbxproj.in
@@ -227,7 +227,10 @@
 		C01FCF4F08A954540054247B /* Debug */ = {
 			isa = XCBuildConfiguration;
 			buildSettings = {
-				HEADER_SEARCH_PATHS = "PATH_TO_MACRUBY_HEADERS/**";
+				HEADER_SEARCH_PATHS = (
+        				"PATH_TO_MACRUBY_HEADERS_1",
+        				"PATH_TO_MACRUBY_HEADERS_2",
+				);
 				GCC_ENABLE_OBJC_GC = required;
 				GCC_WARN_ABOUT_RETURN_TYPE = YES;
 				GCC_WARN_UNUSED_VARIABLE = YES;
@@ -241,7 +244,10 @@
 		C01FCF5008A954540054247B /* Release */ = {
 			isa = XCBuildConfiguration;
 			buildSettings = {
-				HEADER_SEARCH_PATHS = "PATH_TO_MACRUBY_HEADERS/**";
+				HEADER_SEARCH_PATHS = (
+        				"PATH_TO_MACRUBY_HEADERS_1",
+        				"PATH_TO_MACRUBY_HEADERS_2",
+				);
 				GCC_ENABLE_OBJC_GC = required;
 				GCC_WARN_ABOUT_RETURN_TYPE = YES;
 				GCC_WARN_UNUSED_VARIABLE = YES;
