remove gc-stub.o when cleaning, patch by Jordan Breeding
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@103 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/Makefile.in
+++ b/Makefile.in
@@ -198,6 +198,7 @@ lex.c: keywords
 
 clean-local::
 	@$(RM) ext/extinit.c ext/extinit.$(OBJEXT) ext/ripper/y.output
+	@$(RM) gc-stub.$(OBJEXT)
 
 distclean-local::
 	@$(RM) ext/config.cache $(RBCONFIG)
