change to strings as keys
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@462 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/sample-macruby/HotCocoa/calculator/config/build.yml
+++ b/sample-macruby/HotCocoa/calculator/config/build.yml
@@ -1,6 +1,6 @@
-:name: Calculator
-:load: lib/application.rb
-:version: "1.0"
-:icon: /Applications/Calculator.app/Contents/Resources/Calculator.icns
-:sources: 
+name: Calculator
+load: lib/application.rb
+version: "1.0"
+icon: /Applications/Calculator.app/Contents/Resources/Calculator.icns
+sources: 
   - lib/**/*.rb
