--- a/sample-macruby/HotCocoa/demo/config/build.yml
+++ b/sample-macruby/HotCocoa/demo/config/build.yml
@@ -1,6 +1,6 @@
-:name: Demo
-:load: lib/application.rb
-:version: "1.0"
-:icon: resources/HotCocoa.icns
-:sources: 
+name: Demo
+load: lib/application.rb
+version: "1.0"
+icon: resources/HotCocoa.icns
+sources: 
   - lib/**/*.rb
