--- a/data/hotcocoa_template/config/build.yml
+++ b/data/hotcocoa_template/config/build.yml
@@ -1,4 +1,6 @@
-:name: __APPLICATION_NAME__
-:load: lib/application.rb
-:sources: 
+name: __APPLICATION_NAME__
+load: lib/application.rb
+version: "1.0"
+icon: resources/HotCocoa.icns
+sources: 
   - lib/**/*.rb
