--- a/sample-macruby/HotCocoa/calculator/config/build.yml
+++ b/sample-macruby/HotCocoa/calculator/config/build.yml
@@ -1,5 +1,6 @@
 name: Calculator
 load: lib/application.rb
+secure: true
 version: "1.0"
 icon: /Applications/Calculator.app/Contents/Resources/Calculator.icns
 sources: 
