--- a/data/hotcocoa_template/config/build.yml
+++ b/data/hotcocoa_template/config/build.yml
@@ -2,5 +2,7 @@ name: __APPLICATION_NAME__
 load: lib/application.rb
 version: "1.0"
 icon: resources/HotCocoa.icns
+resources:
+  - resources/**/*.*
 sources: 
   - lib/**/*.rb
