moving to LLVM r82747
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2630 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/include/ruby/config.h.in
+++ b/include/ruby/config.h.in
@@ -1,8 +1,3 @@
-#define PACKAGE_NAME ""
-#define PACKAGE_TARNAME ""
-#define PACKAGE_VERSION ""
-#define PACKAGE_STRING ""
-#define PACKAGE_BUGREPORT ""
 #define NEXT_FAT_BINARY 1
 #define USE_BUILTIN_FRAME_ADDRESS 1
 #define _GNU_SOURCE 1
@@ -60,6 +55,9 @@
 #define TOKEN_PASTE(x,y) x##y
 #define STRINGIZE(expr) STRINGIZE0(expr)
 #define HAVE_STDARG_PROTOTYPES 1
+#if defined(NORETURN)
+#undef NORETURN
+#endif
 #define NORETURN(x) __attribute__ ((noreturn)) x
 #define DEPRECATED(x) __attribute__ ((deprecated)) x
 #define NOINLINE(x) __attribute__ ((noinline)) x
